# MonoFocus

./: .gitignore  CMakeLists.txt  README.md
res/: app.manifest  app.rc
src/: app.cpp  app.h  color_matrix.h  constants.h  effect_fullscreen.cpp  effect_fullscreen.h  hotkeys.cpp  hotkeys.h  main.cpp  overlay.cpp  overlay.h  region_select.cpp  region_select.h  settings.cpp  settings.h  tray.cpp  tray.h
